--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
             <p>Best knives</p>
         </div>
         <div class="box9">
-            <p>A kitchen is a dangerous place!</p>
+            <figure>
+                <img src="https://images.unsplash.com/photo-1556910585-09baa3a3998e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80"
+                    width="600" height="" alt="kitchen">
+                <figcaption>A kitchen is a dangerous place!</figcaption>
+            </figure>
         </div>
         <div class="box5"><span>Knife cuts</span><br>Lacerations caused by knives of all kinds (not just the kitchen
             type) affected more than 350,000 people in 2012, according to the Consumer Product Safety Commission. Dull
